# Diplom

LongBCH/: Algorthms.cpp  Algorthms.h  BCH.cpp  BCH.h  CMakeLists.txt  GFq.cpp  GFq.h  Polinomial.cpp  Polynomial.h  Tree.cpp  Tree.h  Utils.cpp  Utils.h  main.cpp  testing.cpp  testing.h
